5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1679_1105.log
== TEST (2019-04-24 11:37:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome == lobo or nome == leao or nome == veado or nome == dragao or nome == rosa or nome == sol or nome == lula or nome == esfolado or nome == turta):
	if(nome == lobo):
		print("Casa: Stark")
	elif(nome == leao):
		print("Casa: Lannister")
	elif(nome == veado):
		print("Casa: Baratheon"):
	elif(nome == rosa):
		print("Casa: Tyrell")
	elif(nome == sol):
		print("Casa: Martell")
	elif(nome == lula):
		print("Casa: Greyjoy")
	elif(nome == esfolado):
		print("Casa: Bolton")
	elif(nome == turta):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- ERROR:
File "XXXX", line 11
    print("Casa: Baratheon"):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 11:38:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome == lobo or nome == leao or nome == veado or nome == dragao or nome == rosa or nome == sol or nome == lula or nome == esfolado or nome == turta):
	if(nome == lobo):
		print("Casa: Stark")
	elif(nome == leao):
		print("Casa: Lannister")
	elif(nome == veado):
		print("Casa: Baratheon")
	elif(nome == rosa):
		print("Casa: Tyrell")
	elif(nome == sol):
		print("Casa: Martell")
	elif(nome == lula):
		print("Casa: Greyjoy")
	elif(nome == esfolado):
		print("Casa: Bolton")
	elif(nome == turta):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome == lobo or nome == leao or nome == veado or nome == dragao or nome == rosa or nome == sol or nome == lula or nome == esfolado or nome == turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 11:47:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome == lobo and nome == leao and nome == veado and nome == dragao and nome == rosa and nome == sol and nome == lula and nome == esfolado and nome == turta):
	if(nome == lobo):
		print("Casa: Stark")
	elif(nome == leao):
		print("Casa: Lannister")
	elif(nome == veado):
		print("Casa: Baratheon")
	elif(nome == rosa):
		print("Casa: Tyrell")
	elif(nome == sol):
		print("Casa: Martell")
	elif(nome == lula):
		print("Casa: Greyjoy")
	elif(nome == esfolado):
		print("Casa: Bolton")
	elif(nome == turta):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome == lobo and nome == leao and nome == veado and nome == dragao and nome == rosa and nome == sol and nome == lula and nome == esfolado and nome == turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 11:51:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome == Stark or nome == Lannister or nome == Baratheon or nome == Targaryen or nome == Tyrell or nome == Martell or nome == Greyjoy or nome == Bolton or nome == Tully):
	if(nome == lobo):
		print("Casa: Stark")
	elif(nome == leao):
		print("Casa: Lannister")
	elif(nome == veado):
		print("Casa: Baratheon")
	elif(nome == rosa):
		print("Casa: Tyrell")
	elif(nome == sol):
		print("Casa: Martell")
	elif(nome == lula):
		print("Casa: Greyjoy")
	elif(nome == esfolado):
		print("Casa: Bolton")
	elif(nome == turta):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome == Stark or nome == Lannister or nome == Baratheon or nome == Targaryen or nome == Tyrell or nome == Martell or nome == Greyjoy or nome == Bolton or nome == Tully):
NameError: name 'Stark' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:12:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome =="Casa" ):
	if(nome == "Casa"):
		print("Casa: Stark")
	elif(nome == "Casa"):
		print("Casa: Lannister")
	elif(nome == "Casa"):
		print("Casa: Baratheon")
	elif(nome == "Casa"):
		print("Casa: Tyrell")
	elif(nome == "Casa"):
		print("Casa: Martell")
	elif(nome == "Casa"):
		print("Casa: Greyjoy")
	elif(nome == "Casa"):
		print("Casa: Bolton")
	elif(nome == "Casa"):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:13:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome == "Casa" ):
	if(nome == "Casa"):
		print("Casa: Stark")
	elif(nome == "Casa"):
		print("Casa: Lannister")
	elif(nome == "Casa"):
		print("Casa: Baratheon")
	elif(nome == "Casa"):
		print("Casa: Tyrell")
	elif(nome == "Casa"):
		print("Casa: Martell")
	elif(nome == "Casa"):
		print("Casa: Greyjoy")
	elif(nome == "Casa"):
		print("Casa: Bolton")
	elif(nome == "Casa"):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- OUTPUT:
Entrada:  lula
Brasao invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:14:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome and "Casa" ):
	if(nome and "Casa"):
		print("Casa: Stark")
	elif(nome and "Casa"):
		print("Casa: Lannister")
	elif(nome and "Casa"):
		print("Casa: Baratheon")
	elif(nome and "Casa"):
		print("Casa: Tyrell")
	elif(nome and "Casa"):
		print("Casa: Martell")
	elif(nome and "Casa"):
		print("Casa: Greyjoy")
	elif(nome and "Casa"):
		print("Casa: Bolton")
	elif(nome and "Casa"):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- OUTPUT:
Entrada:  lula
Casa: Stark
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:16:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: " ,nome)
if(nome or "Casa" ):
	if(nome or "Casa"):
		print("Casa: Stark")
	elif(nome or "Casa"):
		print("Casa: Lannister")
	elif(nome or "Casa"):
		print("Casa: Baratheon")
	elif(nome or "Casa"):
		print("Casa: Tyrell")
	elif(nome or "Casa"):
		print("Casa: Martell")
	elif(nome or "Casa"):
		print("Casa: Greyjoy")
	elif(nome or "Casa"):
		print("Casa: Bolton")
	elif(nome or "Casa"):
		print("Casa: Tully")
	else:
		print("Brasao invalido")
else:
	print("Brasao invalido")
		
-- OUTPUT:
Entrada:  lula
Casa: Stark
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:08:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: ",nome)

if(nome.lower() == "lobo"):
	print("Casa: Stark")
elif(nome.lower() == "leao"):
	print("Casa: Lannister")
elif(nome.lower() == "veado"):
	print("Casa: Baratheon")
elif(nome.lower() == "dragao")	:
	print("Casa: Targaryen")
elif(nome.lower() == "rosa"):	
	print("Casa: Tyrell")
elif(nome.lower() == "sol"):
	print("Casa: Martell")
elif(nome.lower() == "lula"):
	print("Casa: Greyjoy")
elif(nome.lower() == "esfolado"):
	print("Casa: Bolton")
elif(nome.lower() == "turta"):
	print("Casa: Tully")
else:	
	print("Brasao invalido")
		
	
		
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:08:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: ",nome)

if(nome.lower() == "lobo"):
	print("Casa: Stark")
elif(nome.lower() == "leao"):
	print("Casa: Lannister")
elif(nome.lower() == "veado"):
	print("Casa: Baratheon")
elif(nome.lower() == "dragao")	:
	print("Casa: Targaryen")
elif(nome.lower() == "rosa"):	
	print("Casa: Tyrell")
elif(nome.lower() == "sol"):
	print("Casa: Martell")
elif(nome.lower() == "lula"):
	print("Casa: Greyjoy")
elif(nome.lower() == "esfolado"):
	print("Casa: Bolton")
elif(nome.lower() == "turta"):
	print("Casa: Tully")
else:	
	print("Brasao invalido")
		
	
		
-- EXECUTION TIME:
0.122375
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:09:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: ",nome)

if(nome.lower() == "lobo"):
	print("Casa: Stark")
elif(nome.lower() == "leao"):
	print("Casa: Lannister")
elif(nome.lower() == "veado"):
	print("Casa: Baratheon")
elif(nome.lower() == "dragao")	:
	print("Casa: Targaryen")
elif(nome.lower() == "rosa"):	
	print("Casa: Tyrell")
elif(nome.lower() == "sol"):
	print("Casa: Martell")
elif(nome.lower() == "lula"):
	print("Casa: Greyjoy")
elif(nome.lower() == "esfolado"):
	print("Casa: Bolton")
elif(nome.lower() == "turta"):
	print("Casa: Tully")
else:	
	print("Brasao invalido")
		
	
		
-- EXECUTION TIME:
0.165829
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 23:40:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
nome=input("nome: ")
print("Entrada: ",nome)

if(nome.lower() == "lobo"):
	print("Casa: Stark")
elif(nome.lower() == "leao"):
	print("Casa: Lannister")
elif(nome.lower() == "veado"):
	print("Casa: Baratheon")
elif(nome.lower() == "dragao")	:
	print("Casa: Targaryen")
elif(nome.lower() == "rosa"):	
	print("Casa: Tyrell")
elif(nome.lower() == "sol"):
	print("Casa: Martell")
elif(nome.lower() == "lula"):
	print("Casa: Greyjoy")
elif(nome.lower() == "esfolado"):
	print("Casa: Bolton")
elif(nome.lower() == "turta"):
	print("Casa: Tully")
else:	
	print("Brasao invalido")
		
	
		
-- EXECUTION TIME:
0.144938
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
